# gstreamer-rk

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitlab-image-tags.yml  .indent_cpp_list  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  goblint.toml  gst-env.py  meson.build  meson.options  meson_options.txt
subprojects/gst-devtools/dots-viewer/: .gitignore  Cargo.toml  meson.build
subprojects/gst-devtools/dots-viewer/meson/: gen-resources.py  version.rs.in
subprojects/gst-devtools/dots-viewer/src/: main.rs
subprojects/gst-libav/: meson.build  meson.options
subprojects/gst-libav/docs/: meson.build
subprojects/gst-libav/ext/libav/: gstav.c  gstavcodecmap.c  gstavcodecmap.h  gstavdemux.c  gstavmux.c  gstavparse.c  gstavvidalphadecodebin.c  gstavvidalphadecodebin.h  gstavvidcmp.c  gstavviddec.c  gstavviddec.h  meson.build
subprojects/gst-libav/tests/check/: meson.build
subprojects/gst-libav/tests/files/: sine.g729
subprojects/gst-plugins-android/: .gitignore  LICENSE.Apache-2.0  LICENSE.LGPL-2.1  README.md  meson.build  meson_options.txt
subprojects/gst-plugins-android/aosp/: meson.build
subprojects/gst-plugins-android/iamf/: meson.build
subprojects/gst-plugins-android/porting/: AStringUtils_stub.cpp  C2LinuxMallocAllocator.cpp  C2LinuxMallocAllocator.h  C2Store_linux.cpp  C2Store_linux.h  gst_c2_log.cpp  hardware_buffer_stub.cpp  libyuv_stub.cpp  meson.build  native_handle_stub.cpp  properties_stub.cpp  utils_string8.cpp
subprojects/gst-plugins-android/porting/include/: C2AllocatorGralloc.h  C2AllocatorIon.h  Codec2BufferUtils.h  Codec2CommonUtils.h  aacdecoder_lib.h  aacenc_lib.h  aosp_version.h.in  libyuv.h
subprojects/gst-plugins-android/scripts/: apply_local_patches.py  fetch_aosp_sources.py  fetch_libiamf.py
subprojects/gst-plugins-android/src/: gstc2aacdec.c  gstc2aacdec.h  gstc2common.cc  gstc2common.h  gstc2flacdec.c  gstc2flacdec.h  gstc2iamfdec.c  gstc2iamfdec.h  gstc2mp3dec.c  gstc2mp3dec.h  gstc2opusdec.c  gstc2opusdec.h  gstc2vorbisdec.c  gstc2vorbisdec.h  meson.build  plugin.c
subprojects/gst-plugins-android/tests/: meson.build  test_c2_register.c  test_c2_standalone.cc
subprojects/gst-plugins-bad/ext/executorch/: README.md  gstexecutorch.c  gstexecutorchinference.cpp  gstexecutorchinference.h  meson.build
subprojects/gst-plugins-bad/ext/libndi/: gstndi.c  gstndisrc.c  gstndisrc.h  gstvlndi.c  gstvlndisrc.c  gstvlndisrc.h  meson.build  vlndi.c  vlndi.h
subprojects/gst-plugins-bad/ext/mpeghuimanager/: gstmpeghuimanager.c  gstmpeghuimanager.h  meson.build
subprojects/gst-plugins-bad/ext/placebo/: gstlibplacebo.c  gstplacebo.c  gstplacebo.h  meson.build  placeboapi.c  placeboapi.h  placebogl.c  placebogl.h  placebovulkan.c  placebovulkan.h
subprojects/gst-plugins-bad/ext/spandsp/: gstspanplc.c  meson.build
subprojects/gst-plugins-bad/gst/airtimeaws/: config.h.in  gstairtimeawsenv.cpp  gstairtimeawsenv.hpp  gstairtimeawsplugin.c  gstairtimecleanup.hpp  gstairtimes3bufferfillstatus.hpp  gstairtimes3error.cpp  gstairtimes3error.hpp  gstairtimes3init.cpp  gstairtimes3init.h  gstairtimes3src.cpp  gstairtimes3src.h  gstairtimes3srccontext.cpp  gstairtimes3srccontext.h  gstairtimes3srccontext.hpp  gstairtimes3urichunkdownloadqueue.cpp  gstairtimes3urichunkdownloadqueue.hpp  gstairtimes3urichunkprocessor.cpp  gstairtimes3urichunkprocessor.hpp  gstairtimes3urichunksource.hpp  gstairtimes3urichunksourceaws.cpp  gstairtimes3urichunksourceaws.hpp  gstairtimes3urichunksourcedirectory.cpp  gstairtimes3urichunksourcedirectory.hpp  gstairtimes3urichunksourcefake.cpp  gstairtimes3urichunksourcefake.hpp  gstairtimes3urichunksourcefake_disabled.cpp  gstairtimes3urichunkspec.hpp  gstairtimes3uridownloadedchunknotifier.cpp  gstairtimes3uridownloadedchunknotifier.hpp  gstairtimes3uriobjectmetadata.hpp  gstairtimes3uriprovider.cpp  gstairtimes3uriprovider.hpp  gstairtimes3uriproviderconfig.hpp  gstairtimes3uriproviders.cpp  gstairtimes3uriproviders.hpp  gstairtimes3uriprovidersfactory.cpp  gstairtimes3uriprovidersfactory.hpp  gstairtimes3utils.cpp  gstairtimes3utils.hpp  (+3 more)
subprojects/gst-plugins-bad/gst/archive/: gstarchiveplugin.c  gstzipfilesrc.c  gstzipfilesrc.h  gstzipparser.c  gstzipparser.h  meson.build
subprojects/gst-plugins-bad/gst/codecalpha/: gstalphacombine.c  gstcodecalphademux.c  gsth266alphadecodebin.c  gsth266alphadecodebin.h  gstplugin.c  gstvp8alphadecodebin.c  gstvp8alphadecodebin.h  gstvp9alphadecodebin.c  meson.build
subprojects/gst-plugins-bad/gst/dmabufshare/: gstdmabufshare.c  meson.build
subprojects/gst-plugins-bad/gst/rtmp2/: gstrtmp2.c  gstrtmp2elements.h  gstrtmp2locationhandler.c  gstrtmp2server.h  gstrtmp2serversrc.c  gstrtmp2serversrc.h  gstrtmp2sink.c  gstrtmp2src.c  meson.build
subprojects/gst-plugins-bad/gst/videoframescheduler/: gstvideoframescheduler.c  gstvideoframescheduler.h  meson.build
subprojects/gst-plugins-bad/sys/coreaudio/: gstcoreaudiocontext.c  gstcoreaudiocontext.h  gstcoreaudiodeviceprovider.c  gstcoreaudiodeviceprovider.h  gstcoreaudioringbuf.c  gstcoreaudioringbuf.h  gstcoreaudiosink.c  gstcoreaudiosink.h  gstcoreaudiosrc.c  gstcoreaudiosrc.h  gstcoreaudioutils.c  gstcoreaudioutils.h  meson.build  plugin.c
subprojects/gst-python/: meson.options
subprojects/gst-python/examples/: helloworld.py
subprojects/gst-python/old_examples/: audioconcat.py  bps.py  buffer-draw.py  cp.py  cutter.py  decodebin.py  f2f.py  fvumeter.py  gstfile.py  mixer.py  option-parser.py  play.py  remuxer.py  segments.py  switch.py  synchronizer.py  video-controller.py  vumeter.py
subprojects/gst-python/plugin/: meson.build
subprojects/gst-python/testsuite/: meson.build  test_adapter.py  test_analytics.py  test_audio.py  test_bin.py  test_buffer.py  test_bus.py  test_caps.py  test_element.py  test_event.py  test_gst.py  test_interface.py  test_iterator.py  test_message.py  test_pbutils.py  test_pipeline.py  test_registry.py  test_segment.py  test_struct.py  test_tag.py  test_types.py  test_xml.py
subprojects/packagefiles/vulkan-headers/: meson.build
subprojects/win-pkgconfig/: BUILDING.md  meson.build
(+2105 files in other folders)
