option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')
option('package-origin', type : 'string',
       value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
option('doc', type : 'feature', value : 'auto', yield: true,
       description: 'Enable documentation.')
option('tests', type : 'feature', value : 'auto', yield : true)
option('glib_assert', type : 'boolean', value : true, yield : true,
       description : 'Enable GLib assertion (see docs/macros.txt)')
