[package]
name = "gst-dots-viewer"
version = "0.1.0"
edition = "2021"
default-run = "gst-dots-viewer"
# Member of the gst-devtools cargo workspace (../Cargo.toml); the resolved
# Cargo.lock lives at the workspace root so Meson's rust module can drive it.

[dependencies]
actix = "0.13"
# Trim the heavy default features (compression pulls in the C-compiling
# zstd-sys, brotli, flate2, cookies, http2). "ws" is required by
# actix-web-actors for the websocket transport.
actix-web = { version = "4.0", default-features = false, features = ["macros", "ws"] }
actix-web-actors = "4.0"
notify = "8.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
actix-web-static-files = { version = "4.0", features = ["static-files-03"] }
static-files = { version = "0.3", features = ["sort"] }
single-instance = "0.3.3"
opener = "0.8"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_UI_Shell"] }

[build-dependencies]
static-files = { version = "0.3", features = ["sort"] }

[[bin]]
name = "gst-dots-viewer"
path = "src/main.rs"
